fixed typo on line 298; verified chain rule is correct (line 322)

--- a/GS-extension.tex
+++ b/GS-extension.tex
@@ -295,7 +295,7 @@ Discrete version (Conversation between Kristy and Frank, 3/27/15)
 		Assuming $\ve \sim N(0,1)$, the probability that legislator $z$ votes ``no'' is $\Phi\left(\beta z - \alpha + b(z) \right)$
 	\item Take a model with three legislators with ideal points at $z=-\frac{1}{2}$, $z=0$ and $z=\frac{1}{2}$. Then the three probabilities are
 		\begin{itemize}
-			\item $\Phi\left(-\frac{\beta}{2} - \alpha + b(z) \right)$, $\Phi\left(- \alpha + b(z) \right)$, and $\Phi\left(\frac{\beta}{2} - \alpha + b(z) \right)$
+			\item $\Phi\left(-\frac{\beta}{2} - \alpha + b(-\frac{1}{2}) \right)$, $\Phi\left(- \alpha + b(0) \right)$, and $\Phi\left(\frac{\beta}{2} - \alpha + b(\frac{1}{2}) \right)$
 			\item Whether a legislator $z$ votes ``no'' is a random variable, denote it $X(z)$, distributed Bernoulli with this probability:
 				\[
 				  X(z) \sim \text{Bernoulli}(p(z)) \hskip.2in \text{where} \hskip.2in p(z) = \Phi\left(\beta z - \alpha + b(z) \right)
