add notes on next steps, intuition and questions

--- a/GS-extension.tex
+++ b/GS-extension.tex
@@ -373,7 +373,20 @@ Discrete version (Conversation between Kristy and Frank, 3/27/15)
 				\[
 				   \left[ -\frac{\beta}{2} - \alpha + b\left(-\frac{1}{2}\right) \right] = \left[ \frac{\beta}{2} - \alpha + b\left(\frac{1}{2}\right) \right] +\left[ - \alpha + b(0) \right]
 				\]
-			\item A little more math implies that all three quantities in brackets must equal zero.
+			\item A little more math implies that all three quantities in brackets must equal zero
+				\begin{itemize}
+					\item That is, Vote Buyer B's bribe should make each legislator just indifferent between the new proposal and the status quo
+					\item First question: why doesn't this depend on willingness-to-pay?
+						\begin{itemize}
+							\item FOC says each bribe should be calibrated so that $W_B \cdot \text{marginal contribution to probability} = 1$, or $\frac{\partial \text{probability}}{\partial \text{bribe}} = \frac{1}{W_B}$
+							\item Something happens when all three conditions come together...what's the intuition?
+						\end{itemize}
+					\item To do next: see what non-negativity of bribes implies
+						\begin{itemize}
+							\item Also, insert Vote Buyer A's behavior
+							\item And give the various legislators different variances
+						\end{itemize}
+				\end{itemize}
 		\end{itemize}
 \end{itemize}
 
